--- a/package.json
+++ b/package.json
@@ -3,17 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "extract-text-webpack-plugin": "^3.0.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
+    "react-redux": "^5.0.7",
+    "react-scripts": "1.1.1",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
+    "autoprefixer": "^8.0.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.10",
+    "css-mqpacker": "^6.0.2",
+    "cssnano": "^3.10.0",
+    "less": "^3.0.1",
+    "less-loader": "^4.0.6",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-loader": "^2.1.1",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.20.2"
   },
@@ -21,7 +31,6 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "wp": "webpack --mode production --watch"
+    "eject": "react-scripts eject"
   }
 }
