--- a/package.json
+++ b/package.json
@@ -3,34 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "proxyquire": "^2.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.1",
-    "redux": "^3.7.2",
-    "rewire": "^3.0.2"
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "autoprefixer": "^8.1.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "css-loader": "^0.28.10",
     "css-mqpacker": "^6.0.2",
     "cssnano": "^3.10.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "less": "^3.0.1",
     "less-loader": "^4.0.6",
     "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^2.1.1",
+    "proxyquire": "^2.0.0",
     "raw-loader": "^0.5.1",
-    "style-loader": "^0.20.2",
-    "webpack": "^4.1.1",
-    "webpack-cli": "^2.0.10",
-    "webpack-dev-server": "^3.1.0"
+    "rewire": "^3.0.2",
+    "style-loader": "^0.20.2"
   },
   "scripts": {
     "start": "node scripts/customized-config start",
