added unit-testing tools

--- a/package.json
+++ b/package.json
@@ -12,17 +12,22 @@
   "devDependencies": {
     "autoprefixer": "^8.1.0",
     "babel-core": "^6.26.0",
+    "babel-jest": "^22.4.1",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "css-loader": "^0.28.10",
     "css-mqpacker": "^6.0.2",
     "cssnano": "^3.10.0",
+    "enzyme": "^3.3.0",
+    "enzyme-to-json": "^3.3.1",
+    "jest": "^22.4.2",
     "less": "^3.0.1",
     "less-loader": "^4.0.6",
     "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^2.1.1",
     "proxyquire": "^2.0.0",
     "raw-loader": "^0.5.1",
+    "react-addons-test-utils": "^15.6.2",
     "rewire": "^3.0.2",
     "style-loader": "^0.20.2"
   },
