--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "css-loader": "^0.28.10",
     "css-mqpacker": "^6.0.2",
     "cssnano": "^3.10.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "less": "^3.0.1",
     "less-loader": "^4.0.6",
     "postcss-cssnext": "^3.1.0",
