--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.2.0",
+    "react-addons-update": "^15.6.2",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.1",
@@ -25,6 +26,7 @@
     "postcss-loader": "^2.1.1",
     "proxyquire": "^2.0.0",
     "raw-loader": "^0.5.1",
+    "redux-mock-store": "^1.5.1",
     "rewire": "^3.0.2",
     "style-loader": "^0.20.2"
   },
