--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cssnano": "^3.10.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "file-loader": "^1.1.11",
     "less": "^3.0.1",
     "less-loader": "^4.0.6",
     "postcss-cssnext": "^3.1.0",
